kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homi-backend-svc
  namespace: homi
spec:
  type: ClusterIP
  selector:
    app: homi
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
