kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homi-ingress
  namespace: homi
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: homi.ducanhnguyxn.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homi-backend-svc
                port:
                  number: 8080
    - host: homi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homi-backend-svc
                port:
                  number: 8080
